fix: Adjust gap

--- a/includes/blocks/mtdev-testimonials-block/src/style.scss
+++ b/includes/blocks/mtdev-testimonials-block/src/style.scss
@@ -36,7 +36,7 @@
   display: flex;
   padding: 2rem 1.5rem;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.5rem;
 
   p {
     margin: 0;
